# dtw_btc

./: .gitignore  README.md  pyproject.toml
src/dtw/: main.py
src/dtw/templates/: __init__.py  head_shoulders.py  head_shoulders_reverse.py  triple_top_rectangle.py
src/dtw/utils/: __init__.py  utils.py
src/dtw_btc/: main.py
src/dtw_btc/templates/: __init__.py  bump_and_run_reversal.py  double_bottom_reversal.py  double_top_reversal.py  falling_wedge.py  head_and_shoulders_bottom.py  head_and_shoulders_top.py  pattern.py  rising_wedge.py  symmetrical_triangle.py  triple_bottom_reversal.py  triple_top_reversal.py
src/dtw_btc/utils/: __init__.py  utils.py
