[tool.poetry]
name = "dtw"
version = "0.1.0"
description = ""
authors = [" Stephan Schrijver <stephanschrijver@gmail.com>"]
packages = [
    {include = "dtw_btc", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.6.1"
cryptory = { git = "https://github.com/sschrijver/cryptory.git", branch = "master" }
pandas = "1.0.3"
joblib = "0.15.1"
matplotlib = "3.2.1"
dtaidistance = "1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
